adds retry code, removes error_log, adds Psr\Log as dependency, adds error logging
exponential backoff

WIP

setable upper rate limit

WIP

WIP

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Clever PHP library",
     "homepage": "http://getclever.com/",
     "require": {
-        "php": ">=5.2"
+        "php"    : ">=5.2",
+        "psr/log": "~1.0"
     },
     "autoload": {
         "classmap": [
