--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "require": {
         "php": ">=5.2"
     },
+    "require-dev": {
+        "phpunit/phpunit" : "~4.0",
+        "psr/log": "~1.0"
+    },
     "autoload": {
         "classmap": [
             "lib/Clever.php"
