--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "php": ">=5.2"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0",
-        "psr/log": "~1.0"
+        "phpunit/phpunit" : "~4.0"
     },
     "autoload": {
         "classmap": [
