--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "psr/log": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0",
-        "psr/log": "~1.0"
+        "phpunit/phpunit" : "~4.0"
     },
     "autoload": {
         "classmap": [
