add Clever-Dev-CI hipchat notifications via .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,3 +13,9 @@ notify:
     on_started: true
     on_success: true
     on_failure: true
+  hipchat:
+    room: Clever-Dev-CI
+    token: {{hipchatToken}}
+    on_started: true
+    on_success: true
+    on_failure: true
