--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "clever/clever-php",
-    "description": "Clever PHP library",
-    "homepage": "http://getclever.com/",
+    "name": "fixedd/clever-php",
+    "description": "fixedd's version of the Clever PHP library",
     "require": {
         "php"    : ">=5.3",
         "psr/log": "~1.0"
