Update composer package name to sourcetoad/clever-php

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "clever/clever",
+    "name": "sourcetoad/clever-php",
     "description": "",
     "keywords": [
         "swagger",
